--- a/package.json
+++ b/package.json
@@ -1,46 +1,44 @@
 {
-    "name": "gulp-spirit-demo",
+    "name": "b8-web",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "b8",
+    "main": "gulpfile.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "gulp",
-        "dev": "gulp watch",
+        "dev": "gulp",
         "build": "gulp build"
     },
-    "keywords": [],
-    "author": "",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/love-peach/b8-web.git"
+    },
+    "keywords": [
+        "gulp",
+        "browser-sync"
+    ],
+    "author": "zhangjinpei",
     "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/love-peach/b8-web/issues"
+    },
+    "homepage": "https://github.com/love-peach/b8-web#readme",
     "devDependencies": {
-        "del": "~2.0.2",
-        "exec": "~0.2.0",
-        "gulp": "~3.9.0",
-        "gulp-autoprefixer": "^3.1.0",
-        "gulp-batch-replace": "0.0.0",
-        "gulp-changed": "^1.3.0",
-        "gulp-clean": "^0.3.1",
-        "gulp-concat": "^2.6.0",
-        "gulp-connect": "~2.2.0",
-        "gulp-header": "~1.2.2",
-        "gulp-imagemin": "^2.4.0",
-        "gulp-jade": "~1.0.0",
-        "gulp-jshint": "^2.0.0",
-        "gulp-less": "^3.0.5",
-        "gulp-livereload": "^3.8.1",
-        "gulp-minify-css": "^1.2.3",
-        "gulp-open": "~0.3.2",
-        "gulp-rename": "^1.2.2",
-        "gulp-replace-task": "~0.2.1",
-        "gulp-sourcemaps": "~1.5.1",
-        "gulp-tap": "~0.1.3",
-        "gulp-uglify": "^1.5.1",
-        "gulp-util": "~3.0.4",
-        "gulp.spritesmith": "^4.1.1",
-        "imagemin-pngquant": "^4.2.0",
-        "jshint": "~2.6.3",
-        "jshint-stylish": "~1.0.1",
-        "path": "~0.12.7",
-        "yargs": "~3.15.0"
+        "browser-sync": "^2.24.4",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^5.0.0",
+        "gulp-changed": "^3.2.0",
+        "gulp-clean": "^0.4.0",
+        "gulp-clean-css": "^3.9.4",
+        "gulp-concat": "^2.6.1",
+        "gulp-imagemin": "^4.1.0",
+        "gulp-jshint": "^2.1.0",
+        "gulp-less": "^3.5.0",
+        "gulp-make-css-url-version": "0.0.13",
+        "gulp-rename": "^1.2.3",
+        "gulp-uglify": "^3.0.0",
+        "gulp.spritesmith": "^6.9.0",
+        "imagemin-pngquant": "^5.1.0",
+        "jshint": "^2.9.5",
+        "run-sequence": "^2.2.1"
     }
 }
